--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,14 @@
 .action-button {
     display: flex;
 }
+
+#root-buttons {
+    background-color: #4caf50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 36px;
+}
