--- a/views/root.mustache
+++ b/views/root.mustache
@@ -9,10 +9,12 @@
 
 <body>
 
-  <div class="jumbotron">
+<div id="root-page" class="jumbotron">
 
-  <h1>Welcome to the Football Pool Dashboard<h1> 
-
+  <h1>Welcome to the Football Pool Dashboard</h1> 
+  
+  <img src="nfl-wallpape.jpg" alt="background image" width="800" height="450">
+  
   <div class="container">
   
     <a href="/login" id="root-buttons">
